create display single Product feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,8 +59,8 @@
       <router-outlet></router-outlet>
     </div>
 
-    <div class="bg-red-500 flex-1 h-screen">
-
+    <div class="bg-gray-100 flex-1 h-full px-5 py-5">
+      <router-outlet name="second"></router-outlet>
     </div>
 
   </div>
