--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,18 +1,35 @@
 <div
     class="container flex flex-col mx-auto w-full items-center justify-center bg-white dark:bg-gray-800 rounded-lg shadow">
-    <div class="px-4 py-5 sm:px-6 border-b w-full">
-        <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-white">
-            Notre produits
-        </h3>
-        <p class="mt-1 max-w-2xl text-sm text-gray-500 dark:text-gray-200">
-            Information detaillé de produits.
-        </p>
+
+    <div class="flex flex-1 items-center  w-full">
+        <div class="px-4 py-5 sm:px-6 border-b w-full">
+            <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-white">
+                Notre produits
+            </h3>
+            <p class="mt-1 max-w-2xl text-sm text-gray-500 dark:text-gray-200">
+                Information detaillé de produits.
+            </p>
+        </div>
+        <div class="pr-10">
+            <button type="button"
+                class="py-2 px-4 flex justify-center items-center h-7 bg-blue-900 hover:bg-blue-700 focus:ring-blue-500 focus:ring-offset-gray-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-full dark:bg-yellow-600 dark:hover:bg-yellow-700 dark:focus:ring-yellow-500 dark:focus:ring-offset-gray-200">
+
+                <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" class="mr-2" fill="none"
+                    viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z" />
+                </svg>
+                Ajouter
+            </button>
+        </div>
     </div>
+
     <ul class="flex-col  divide divide-y " *ngIf="products$ | async as products">
         <li tabindex="-1"
-            class="flex flex-row w-full focus:outline-none focus:ring-4 focus:ring-yellow-300 focus:ring-inset focus:ring-opacity-50 focus:bg-blue-500 hover:bg-blue-300  "
-            *ngFor="let product of products">
-            <div class=" cursor-pointer flex flex-1 items-center p-4  ">
+            class="flex flex-row w-full focus:outline-none focus:ring-4 focus:ring-yellow-900 focus:ring-inset focus:ring-opacity-50 focus:bg-blue-400 hover:bg-blue-100 dark:hover:bg-blue-400 "
+            *ngFor="let product of products"
+            [ngClass]="{'.productSelected':product?.id === (selectedProduct$ | async )?.id}">
+            <div class=" cursor-pointer flex flex-1 items-center p-4 " (click)="productSelected(product)">
                 <div class="flex flex-col w-10 h-10 justify-center items-center mr-4">
                     <a href="#" class="block relative">
                         <img alt="profil" src="assets/product.svg"
