--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -38,7 +38,8 @@
                     </div>
                     <div class="text-xs mr-2 py-1.5 pl-4 ">
                         <button type="button"
-                            class="py-2 px-4 flex justify-center items-center h-7 bg-red-600 hover:bg-red-700 focus:ring-red-500 focus:ring-offset-gray-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-full dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-500 dark:focus:ring-offset-gray-200">
+                            class="py-2 px-4 flex justify-center items-center h-7 bg-red-600 hover:bg-red-700 focus:ring-red-500 focus:ring-offset-gray-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded-full dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-500 dark:focus:ring-offset-gray-200"
+                            (click)="deleteProduct(product)">
 
                             <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" class="mr-2" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
