--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,17 +13,13 @@
         </div>
         <div class="block">
           <div class="md:block -mr-2 flex">
-            <form class="flex w-full max-w-sm space-x-3">
+            <form class="flex w-full space-x-3">
               <div class=" relative ">
-                <input type="text" id="&quot;form-subscribe-Search"
+                <input type="email" id="search-text" aria-describedby="search-text"
                   class=" rounded-lg border-transparent flex-1 appearance-none border border-gray-300 w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:ring-yellow-600 focus:border-transparent"
-                  placeholder="components" />
+                  placeholder="Chercher un produit..." autofocus (input)="OnInput($event)" (focus)="onFocus()"
+                  (focusout)="onFocusOut()" />
               </div>
-              <button
-                class="flex-shrink-0 px-4 py-2 text-base font-semibold text-white bg-yellow-600 rounded-lg shadow-md hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:ring-offset-2 focus:ring-offset-yellow-200"
-                type="submit">
-                Search
-              </button>
             </form>
           </div>
           <div class="ml-4 flex items-center md:ml-6">
