add a README file

--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -7,7 +7,7 @@
                 Notre produits
             </h3>
             <p class="mt-1 max-w-2xl text-sm text-gray-500 dark:text-gray-200">
-                Information detaillé de produits.
+                liste des produits disponible sur stock.
             </p>
         </div>
         <div class="pr-10">
